--- a/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -22,21 +22,24 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DefaultDays)
-            </td>
-            <td>
-                <a class="btn btn-warning"  asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i></a>
-                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info-circle"></i></a>
-                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fas fa-trash-alt"></i></button>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DefaultDays)
+                </td>
+                <td>
+                    <button data-id="@item.Id" class="btn btn-primary allocateBtn" type="button"> Allocate Leave </button>
+
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i></a>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info-circle"></i></a>
+                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fas fa-trash-alt"></i></button>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 
@@ -44,12 +47,14 @@
     <input type="hidden" id="leaveTypeId" name="Id" />
 </form>
 
+<form id="allocateForm" asp-action="AllocateLeave">
+    <input type="hidden" id="leaveTypeIdAllocate" name="Id" />
+</form>
+
 @section Scripts {
     <script>
-        $(function() {
-            new DataTable('.table');
-
-            $('.deleteBtn').click(function(e) {
+        $(function () {
+            $('.deleteBtn').click(function (e) {
                 swal({
                     title: "Are you sure?",
                     text: "Are you sure you want to delete this record?",
@@ -62,6 +67,23 @@
                         var id = btn.data("id");
                         $('#leaveTypeId').val(id);
                         $('#deleteForm').submit();
+                    }
+                });
+            });
+
+            $('.allocateBtn').click(function (e) {
+                swal({
+                    title: "Are you sure?",
+                    text: "Are you sure you want to allocate this leave to all employees?",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                    if (confirm) {
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $('#leaveTypeIdAllocate').val(id);
+                        $('#allocateForm').submit();
                     }
                 });
             });
